@@ -361,7 +361,7 @@ GenerateSwappingCode(io::Printer* printer) const {
 
 void RepeatedStringFieldGenerator::
 GenerateInitializer(io::Printer* printer) const {
-  // Not needed for repeated fields.
+  printer->Print(variables_, ",\n$name$_()");
 }
 
 void RepeatedStringFieldGenerator::
